...
                android:layout_marginTop="@dimen/_4sdp"
                app:endIconMode="clear_text"
                android:textSize="@dimen/_14ssp"
                app:placeholderText="@string/masukan_email">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14ssp"
                    android:background="@drawable/normal_state_edittext_outline"
                    android:inputType="textEmailAddress"
                    android:paddingVertical="12dp" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/red_error"
                android:visibility="gone" />
            <Button
                android:id="@+id/btn_login"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="match_parent"
                android:background="@drawable/button_rounded_purple_10px"
                android:fontFamily="@font/pjs_medium"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_8sdp"
...
