...
    <string name="masukan_ulang_kata_sandi">Masukan Ulang Kata Sandi</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="nama_lengkap_wajib_diisi">Nama lengkap wajib diisi</string>
    <string name="kami_akan_mengirimkan_tautan_untuk_mengatur_ulang_kata_sandi_anda">Kami akan mengirimkan tautan untuk mengatur ulang kata sandi Anda</string>
    <string name="kirim_tautan">Kirim Tautan</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Ya</string>
    <string name="nama_siswa">Nama Siswa</string>
    <string name="pilih">Pilih</string>
    <string name="pilih_siswa">Pilih Siswa</string>
    <string name="loading">Loading</string>
    <string name="baca_huruf">Baca Huruf</string>
    <string name="baca_kata">Baca Kata</string>
    <string name="baca_kalimat">Baca Kalimat</string>
    <string name="a">A</string>
    <!-- TODO: Remove or change this placeholder text -->
...
