<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_183sdp"
                android:layout_height="@dimen/_64sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_24sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_logo_wide"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_capt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                style="@style/TextViewH14Medium"
                android:textColor="@color/neutral_700"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:endIconMode="clear_text"
                app:placeholderText="@string/masukan_email"
                android:textSize="@dimen/_14sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:inputType="textEmailAddress"
                android:background="@drawable/normal_state_edittext_outline"
                android:paddingVertical="12dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/txt_email_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                style="@style/TextViewH12Regular"
                android:visibility="gone"
                android:textColor="@color/red_error"/>

            <TextView
                android:id="@+id/txt_capt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/kata_sandi"
                style="@style/TextViewH14Medium"
                android:textColor="@color/neutral_700"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:endIconMode="password_toggle"
                android:textSize="@dimen/_14sdp"
                app:placeholderText="@string/masukan_katasandi"
                android:layout_marginTop="@dimen/_4sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:background="@drawable/normal_state_edittext_outline"
                    android:paddingHorizontal="8dp"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:paddingVertical="12dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/txt_password_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                style="@style/TextViewH12Regular"
                android:visibility="gone"
                android:textColor="@color/red_error"/>
            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/lupa_kata_sandi"
                style="@style/TextViewH12Regular"
                android:textColor="@color/primary_500"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="match_parent"
                android:background="@drawable/button_rounded_purple_10px"
                android:fontFamily="@font/pjs_medium"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:paddingVertical="@dimen/_8sdp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:text="@string/masuk"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginBottom="@dimen/_48sdp"
                android:layout_marginTop="@dimen/_64sdp">
                <TextView
                    android:id="@+id/txt_capt_belum_punya_akun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/belum_punya_akun"
                    style="@style/TextViewH14Regular"
                    android:textColor="@color/neutral_700"/>
                <TextView
                    android:id="@+id/txt_daftar"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/pjs_medium"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14ssp"
                    android:text="@string/daftar"
                    android:textAlignment="center"
                    android:background="@drawable/button_outline_rounded_focused_purple"
                    android:textAllCaps="false"
                    android:paddingVertical="@dimen/_8sdp"
                    android:textColor="@color/primary_700"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>