<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.feat_menu_utama.MainActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar_action"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:src="@drawable/ic_person"
                app:civ_border_color="@color/primary_100"
                app:civ_border_width="@dimen/_2sdp"/>
            <TextView
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewH16Bold"
                android:textAlignment="center"
                android:text="@string/loading"
                android:layout_marginTop="@dimen/_8sdp"/>

            <Button
                android:id="@+id/btn_riwayat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Riwayat Belajar"
                android:fontFamily="@font/pjs_medium"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_16sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:textColor="@color/neutral_500"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_baca_huruf"
                android:layout_marginTop="@dimen/_48sdp"
                android:layout_width="match_parent"
                android:textSize="@dimen/_12ssp"
                android:background="@drawable/button_rounded_green_10px"
                android:fontFamily="@font/pjs_medium"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_8sdp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="@string/baca_huruf"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_baca_kata"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="match_parent"
                android:textSize="@dimen/_12ssp"
                android:background="@drawable/button_rounded_blue_10px"
                android:fontFamily="@font/pjs_medium"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_8sdp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="@string/baca_kata"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_baca_kalimat"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="match_parent"
                android:textSize="@dimen/_12ssp"
                android:background="@drawable/button_rounded_purple_10px"
                android:fontFamily="@font/pjs_medium"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_8sdp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="Baca Kalimat"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_logout"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_width="match_parent"
                android:background="@drawable/button_rounded_blue_10px"
                android:fontFamily="@font/pjs_medium"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_8sdp"
                android:visibility="invisible"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="Keluar"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>